# Oso-Aether

./: .gitignore  Cargo.toml  README.md  Todo  pyproject.toml
contracts/: Move.toml
contracts/sources/: memory.move  pet.move  registry.move
core/interpreter/: Cargo.toml
core/interpreter/src/: events.rs  executor.rs  garden.rs  lib.rs  odu.rs  ownership.rs  response.rs  state.rs  tools.rs  translator.rs
core/parser/: Cargo.toml
core/parser/src/: lib.rs  parser.rs  primitives.rs  wasm.rs
core/wasm/: Cargo.toml
core/wasm/src/: lib.rs
docs/: API.md  ARCHITECTURE.md  PRIMITIVES.md
engine/86-dna/: index.ts
engine/ascii-renderer/: animator.ts  evolution.ts  generator.ts  index.ts  registry.ts
engine/growth/: index.ts
examples/: basic.aether  pet-demo.aether
frontend/: .env.example  next.config.js  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/api/memory/[agentId]/: route.ts
frontend/app/api/translator/birth/: route.ts
frontend/app/api/translator/think/: route.ts
frontend/app/birth/: page.tsx
frontend/app/chat/[petId]/: page.tsx
frontend/app/pets/: page.tsx
frontend/components/chat/: ChatInterface.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/components/pets/: PetDisplay.tsx
frontend/components/providers/: SuiProvider.tsx
frontend/components/wallet/: ConnectButton.tsx
frontend/lib/: aether.ts  state.ts  sui.ts  translator.ts  walrus.ts
frontend/styles/: globals.css
scripts/: build-wasm.sh  deploy-sui.sh  preview-ascii.mjs
translator/: llm_client.py  prompts.py  requirements.txt  server.py  translator.py
