[package]
name = "oso-interpreter"
version = "0.1.0"
edition = "2021"
description = "Executor for Ọ̀ṣỌ́ primitives"

[dependencies]
oso-parser = { path = "../parser" }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
blake3 = "1.5"
serde = { version = "1.0", features = ["derive"], optional = true }

[features]
default = []
serde = ["dep:serde", "oso-parser/serde"]

[lib]
name = "oso_interpreter"
path = "src/lib.rs"
